--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^5.0.0",
+    "react-simple-maps": "^2.3.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^1.1.2"
   },
