fixed routes bug

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://SKA246801.github.io/RHE306-project4",
-  "name": "amazon-clone",
+  "name": "RHE306-project4",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
